package com.yupathbuilder.backend.program_system.entity;

import com.yupathbuilder.backend.course_catalog.entity.CourseEntity;
import jakarta.persistence.*;

/**
 * JPA entity representing a single program requirement row.
 *
 * <p>Each row links a program to a course and captures how that course should
 * appear in the generated checklist.</p>
 */
@Entity
@Table(name = "program_requirements")
public class ProgramRequirementEntity {

    /**
     * Identifies whether a checklist item is mandatory or elective.
     */
    public enum ReqType { REQUIRED, ELECTIVE }

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "program_id", nullable = false)
    private ProgramEntity program;

    @Column(name = "year_level", nullable = false)
    private Byte yearLevel;  // maps cleanly to MySQL TINYINT

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "course_id", nullable = false)
    private CourseEntity course;

    @Enumerated(EnumType.STRING)
    @Column(name = "req_type", nullable = false)
    private ReqType reqType;

    @Column(name = "group_name")
    private String groupName;

    @Column(name = "display_order", nullable = false)
    private int displayOrder;

    public Long getId() { return id; }
    public ProgramEntity getProgram() { return program; }
    public Byte getYearLevel() { return yearLevel; }
    public CourseEntity getCourse() { return course; }
    public ReqType getReqType() { return reqType; }
    public String getGroupName() { return groupName; }
    public int getDisplayOrder() { return displayOrder; }
}
