package com.yupathbuilder.backend.program_system.repo;

import com.yupathbuilder.backend.program_system.entity.FacultyEntity;
import org.springframework.data.jpa.repository.JpaRepository;

/**
 * Persistence gateway for faculty records.
 */
public interface FacultyRepo extends JpaRepository<FacultyEntity, Long> {}

